Restore and improve allcoverage task
- allcoverage task is now correctly depends on test of other modules